src/actors/snapshots/symbolication__actors::symbolication::test_add_bucket.snap
---
created: "2019-06-06T10:53:37.523998Z"
creator: insta@0.8.1
source: src/actors/symbolication.rs
expression: response
---
status: completed
stacktraces:
  - frames:
      - status: missing
        original_index: 0
        instruction_addr: 0x100000fa0
modules:
  - debug_status: missing
    arch: unknown
    type: macho
    code_id: 502fc0a51ec13e479998684fa139dca7
    debug_id: 502fc0a5-1ec1-3e47-9998-684fa139dca7
    image_addr: 0x100000000
    image_size: 4096
