src/actors/snapshots/symbolication__actors::symbolication::test_minidump_macos.snap
---
created: "2019-05-15T11:57:08.233188Z"
creator: insta@0.8.1
source: src/actors/symbolication.rs
expression: response
---
status: completed
timestamp: 1521713398
system_info:
  os_name: Mac OS X
  os_version: 10.12.6
  os_build: 16G29
  cpu_arch: x86_64
crashed: true
crash_reason: EXC_BAD_ACCESS / KERN_INVALID_ADDRESS
assertion: ""
stacktraces:
  - thread_id: 775
    is_requesting: true
    registers:
      r10: 0x2e
      r11: 0x7fffe8105171
      r12: 0x0
      r13: 0x0
      r14: 0x0
      r15: 0x0
      r8: 0xc0008ff
      r9: 0x0
      rax: 0x1
      rbp: 0x7fff56064258
      rbx: 0x7fff56064120
      rcx: 0x0
      rdi: 0x7fff56064120
      rdx: 0x0
      rip: 0x109ba8c15
      rsi: 0x7fff56064140
      rsp: 0x7fff56064110
    frames:
      - status: missing
        original_index: 0
        instruction_addr: 0x109ba8c15
        package: /Users/travis/build/getsentry/breakpad-tools/macos/build/./crash
        trust: context
      - status: missing
        original_index: 1
        instruction_addr: 0x109ba8c70
        package: /Users/travis/build/getsentry/breakpad-tools/macos/build/./crash
        trust: scan
      - status: missing
        original_index: 2
        instruction_addr: 0x7fffe7eeb235
        package: /usr/lib/system/libdyld.dylib
        trust: scan
      - status: missing
        original_index: 3
        instruction_addr: 0x7fffe7eeb235
        package: /usr/lib/system/libdyld.dylib
        trust: scan
modules:
  - debug_status: missing
    unwind_status: missing
    arch: unknown
    type: macho
    code_file: /Users/travis/build/getsentry/breakpad-tools/macos/build/./crash
    debug_id: 67e9247c-814e-392b-a027-dbde6748fcbf
    debug_file: crash
    image_addr: 0x109b9b000
    image_size: 69632
  - debug_status: unused
    unwind_status: unused
    arch: unknown
    type: macho
    code_file: /System/Library/Frameworks/CoreFoundation.framework/Versions/A/CoreFoundation
    debug_id: 36385a3a-60d3-32db-bf55-c6d8931a7aa6
    debug_file: CoreFoundation
    image_addr: 0x7fffd229c000
    image_size: 4800512
  - debug_status: unused
    unwind_status: unused
    arch: unknown
    type: macho
    code_file: /usr/lib/libDiagnosticMessagesClient.dylib
    debug_id: 84a04d24-0e60-3810-a8c0-90a65e2df61a
    debug_file: libDiagnosticMessagesClient.dylib
    image_addr: 0x7fffe668e000
    image_size: 8192
  - debug_status: unused
    unwind_status: unused
    arch: unknown
    type: macho
    code_file: /usr/lib/libSystem.B.dylib
    debug_id: f18ac1e7-c6f1-34b1-8069-be571b3231d4
    debug_file: libSystem.B.dylib
    image_addr: 0x7fffe68cd000
    image_size: 8192
  - debug_status: unused
    unwind_status: unused
    arch: unknown
    type: macho
    code_file: /usr/lib/libc++.1.dylib
    debug_id: 0b43bb5d-e6eb-3464-8de9-b41ac8ed9d1c
    debug_file: libc++.1.dylib
    image_addr: 0x7fffe6a80000
    image_size: 356352
  - debug_status: unused
    unwind_status: unused
    arch: unknown
    type: macho
    code_file: /usr/lib/libc++abi.dylib
    debug_id: bc271ad3-831b-362a-9da7-e8c51f285fe4
    debug_file: libc++abi.dylib
    image_addr: 0x7fffe6ad7000
    image_size: 172032
  - debug_status: unused
    unwind_status: unused
    arch: unknown
    type: macho
    code_file: /usr/lib/libicucore.A.dylib
    debug_id: ccd2ed24-3071-383b-925d-8d763bb12a6f
    debug_file: libicucore.A.dylib
    image_addr: 0x7fffe7041000
    image_size: 2252800
  - debug_status: unused
    unwind_status: unused
    arch: unknown
    type: macho
    code_file: /usr/lib/libobjc.A.dylib
    debug_id: 4df3c25c-52c2-3f01-a3ef-0d9d53a73c1c
    debug_file: libobjc.A.dylib
    image_addr: 0x7fffe75f5000
    image_size: 4022272
  - debug_status: unused
    unwind_status: unused
    arch: unknown
    type: macho
    code_file: /usr/lib/libz.1.dylib
    debug_id: 46e3ffa2-4328-327a-8d34-a03e20bffb8e
    debug_file: libz.1.dylib
    image_addr: 0x7fffe7def000
    image_size: 73728
  - debug_status: unused
    unwind_status: unused
    arch: unknown
    type: macho
    code_file: /usr/lib/system/libcache.dylib
    debug_id: 093a4dab-8385-3d47-a350-e20cb7ccf7bf
    debug_file: libcache.dylib
    image_addr: 0x7fffe7e0f000
    image_size: 20480
  - debug_status: unused
    unwind_status: unused
    arch: unknown
    type: macho
    code_file: /usr/lib/system/libcommonCrypto.dylib
    debug_id: 8a64d1b0-c70e-385c-92f0-e669079fda90
    debug_file: libcommonCrypto.dylib
    image_addr: 0x7fffe7e14000
    image_size: 45056
  - debug_status: unused
    unwind_status: unused
    arch: unknown
    type: macho
    code_file: /usr/lib/system/libcompiler_rt.dylib
    debug_id: 55d47421-772a-32ab-b529-1a46c2f43b4d
    debug_file: libcompiler_rt.dylib
    image_addr: 0x7fffe7e1f000
    image_size: 32768
  - debug_status: unused
    unwind_status: unused
    arch: unknown
    type: macho
    code_file: /usr/lib/system/libcopyfile.dylib
    debug_id: 819bea3c-df11-3e3d-a1a1-5a51c5bf1961
    debug_file: libcopyfile.dylib
    image_addr: 0x7fffe7e27000
    image_size: 36864
  - debug_status: unused
    unwind_status: unused
    arch: unknown
    type: macho
    code_file: /usr/lib/system/libcorecrypto.dylib
    debug_id: 65d7165e-2e71-335d-a2d6-33f78e2df0c1
    debug_file: libcorecrypto.dylib
    image_addr: 0x7fffe7e30000
    image_size: 540672
  - debug_status: unused
    unwind_status: unused
    arch: unknown
    type: macho
    code_file: /usr/lib/system/libdispatch.dylib
    debug_id: 6582bad6-ed27-3b30-b620-90b1c5a4ae3c
    debug_file: libdispatch.dylib
    image_addr: 0x7fffe7eb4000
    image_size: 204800
  - debug_status: missing
    unwind_status: missing
    arch: unknown
    type: macho
    code_file: /usr/lib/system/libdyld.dylib
    debug_id: 9b2ac56d-107c-3541-a127-9094a751f2c9
    debug_file: libdyld.dylib
    image_addr: 0x7fffe7ee6000
    image_size: 24576
  - debug_status: unused
    unwind_status: unused
    arch: unknown
    type: macho
    code_file: /usr/lib/system/libkeymgr.dylib
    debug_id: 7aa011a9-dc21-3488-bf73-3b5b14d1fdd6
    debug_file: libkeymgr.dylib
    image_addr: 0x7fffe7eec000
    image_size: 4096
  - debug_status: unused
    unwind_status: unused
    arch: unknown
    type: macho
    code_file: /usr/lib/system/liblaunch.dylib
    debug_id: b856abd2-896e-3de0-b2c8-146a6af8e2a7
    debug_file: liblaunch.dylib
    image_addr: 0x7fffe7efa000
    image_size: 4096
  - debug_status: unused
    unwind_status: unused
    arch: unknown
    type: macho
    code_file: /usr/lib/system/libmacho.dylib
    debug_id: 17d5d855-f6c3-3b04-b680-e9bf02ef8aed
    debug_file: libmacho.dylib
    image_addr: 0x7fffe7efb000
    image_size: 24576
  - debug_status: unused
    unwind_status: unused
    arch: unknown
    type: macho
    code_file: /usr/lib/system/libquarantine.dylib
    debug_id: 12448cc2-378e-35f3-be33-9dc395a5b970
    debug_file: libquarantine.dylib
    image_addr: 0x7fffe7f01000
    image_size: 12288
  - debug_status: unused
    unwind_status: unused
    arch: unknown
    type: macho
    code_file: /usr/lib/system/libremovefile.dylib
    debug_id: 38d4cb9c-10cd-30d3-8b7b-a515ec75fe85
    debug_file: libremovefile.dylib
    image_addr: 0x7fffe7f04000
    image_size: 8192
  - debug_status: unused
    unwind_status: unused
    arch: unknown
    type: macho
    code_file: /usr/lib/system/libsystem_asl.dylib
    debug_id: 096e4228-3b7c-30a6-8b13-ec909a64499a
    debug_file: libsystem_asl.dylib
    image_addr: 0x7fffe7f06000
    image_size: 102400
  - debug_status: unused
    unwind_status: unused
    arch: unknown
    type: macho
    code_file: /usr/lib/system/libsystem_blocks.dylib
    debug_id: 10dc5404-73ab-35b3-a277-a8afecb476eb
    debug_file: libsystem_blocks.dylib
    image_addr: 0x7fffe7f1f000
    image_size: 4096
  - debug_status: unused
    unwind_status: unused
    arch: unknown
    type: macho
    code_file: /usr/lib/system/libsystem_c.dylib
    debug_id: e5ae5244-7d0c-36ac-8bb6-c7ae7ea52a4b
    debug_file: libsystem_c.dylib
    image_addr: 0x7fffe7f20000
    image_size: 581632
  - debug_status: unused
    unwind_status: unused
    arch: unknown
    type: macho
    code_file: /usr/lib/system/libsystem_configuration.dylib
    debug_id: becc01a2-ca8d-31e6-bcdf-d452965fa976
    debug_file: libsystem_configuration.dylib
    image_addr: 0x7fffe7fae000
    image_size: 16384
  - debug_status: unused
    unwind_status: unused
    arch: unknown
    type: macho
    code_file: /usr/lib/system/libsystem_coreservices.dylib
    debug_id: 7d26de79-b424-3450-85e1-f7fab32714ab
    debug_file: libsystem_coreservices.dylib
    image_addr: 0x7fffe7fb2000
    image_size: 16384
  - debug_status: unused
    unwind_status: unused
    arch: unknown
    type: macho
    code_file: /usr/lib/system/libsystem_coretls.dylib
    debug_id: ec6fcf07-dcfb-3a03-9cc9-6dd3709974c6
    debug_file: libsystem_coretls.dylib
    image_addr: 0x7fffe7fb6000
    image_size: 102400
  - debug_status: unused
    unwind_status: unused
    arch: unknown
    type: macho
    code_file: /usr/lib/system/libsystem_dnssd.dylib
    debug_id: cc960215-0b1b-3822-a13a-3dde96fa796f
    debug_file: libsystem_dnssd.dylib
    image_addr: 0x7fffe7fcf000
    image_size: 28672
  - debug_status: unused
    unwind_status: unused
    arch: unknown
    type: macho
    code_file: /usr/lib/system/libsystem_info.dylib
    debug_id: 611db84c-bf70-3f92-8702-b9f28a900920
    debug_file: libsystem_info.dylib
    image_addr: 0x7fffe7fd6000
    image_size: 172032
  - debug_status: unused
    unwind_status: unused
    arch: unknown
    type: macho
    code_file: /usr/lib/system/libsystem_kernel.dylib
    debug_id: 34b1f16c-bc9c-3c5f-9045-0cae91cb5914
    debug_file: libsystem_kernel.dylib
    image_addr: 0x7fffe8000000
    image_size: 143360
  - debug_status: unused
    unwind_status: unused
    arch: unknown
    type: macho
    code_file: /usr/lib/system/libsystem_m.dylib
    debug_id: 86d499b5-bbdc-3d3b-8a4e-97ae8e6672a4
    debug_file: libsystem_m.dylib
    image_addr: 0x7fffe8023000
    image_size: 294912
  - debug_status: unused
    unwind_status: unused
    arch: unknown
    type: macho
    code_file: /usr/lib/system/libsystem_malloc.dylib
    debug_id: a3d15f17-99a6-3367-8c7e-4280e8619c95
    debug_file: libsystem_malloc.dylib
    image_addr: 0x7fffe806b000
    image_size: 126976
  - debug_status: unused
    unwind_status: unused
    arch: unknown
    type: macho
    code_file: /usr/lib/system/libsystem_network.dylib
    debug_id: 369d0221-56ca-3c3e-9ede-94b41cae77b7
    debug_file: libsystem_network.dylib
    image_addr: 0x7fffe808a000
    image_size: 368640
  - debug_status: unused
    unwind_status: unused
    arch: unknown
    type: macho
    code_file: /usr/lib/system/libsystem_networkextension.dylib
    debug_id: b021f2b3-8a75-3633-abb0-fc012b8e9b0c
    debug_file: libsystem_networkextension.dylib
    image_addr: 0x7fffe80e4000
    image_size: 40960
  - debug_status: unused
    unwind_status: unused
    arch: unknown
    type: macho
    code_file: /usr/lib/system/libsystem_notify.dylib
    debug_id: b8160190-a069-3b3a-bdf6-2aa408221fae
    debug_file: libsystem_notify.dylib
    image_addr: 0x7fffe80ee000
    image_size: 40960
  - debug_status: unused
    unwind_status: unused
    arch: unknown
    type: macho
    code_file: /usr/lib/system/libsystem_platform.dylib
    debug_id: 897462fd-b318-321b-a554-e61982630f7e
    debug_file: libsystem_platform.dylib
    image_addr: 0x7fffe80f8000
    image_size: 36864
  - debug_status: unused
    unwind_status: unused
    arch: unknown
    type: macho
    code_file: /usr/lib/system/libsystem_pthread.dylib
    debug_id: b8fb5e20-3295-39e2-b5eb-b464d1d4b104
    debug_file: libsystem_pthread.dylib
    image_addr: 0x7fffe8101000
    image_size: 45056
  - debug_status: unused
    unwind_status: unused
    arch: unknown
    type: macho
    code_file: /usr/lib/system/libsystem_sandbox.dylib
    debug_id: 4b92ec49-acd0-36ae-b07a-a2b8152eaf9d
    debug_file: libsystem_sandbox.dylib
    image_addr: 0x7fffe810c000
    image_size: 16384
  - debug_status: unused
    unwind_status: unused
    arch: unknown
    type: macho
    code_file: /usr/lib/system/libsystem_secinit.dylib
    debug_id: f78b847b-3565-3e4b-98a6-f7ad40392e2d
    debug_file: libsystem_secinit.dylib
    image_addr: 0x7fffe8110000
    image_size: 8192
  - debug_status: unused
    unwind_status: unused
    arch: unknown
    type: macho
    code_file: /usr/lib/system/libsystem_symptoms.dylib
    debug_id: 3390e07c-c1ce-348f-adbd-2c5440b45eaa
    debug_file: libsystem_symptoms.dylib
    image_addr: 0x7fffe8112000
    image_size: 32768
  - debug_status: unused
    unwind_status: unused
    arch: unknown
    type: macho
    code_file: /usr/lib/system/libsystem_trace.dylib
    debug_id: ac63a7fe-50d9-3a30-96e6-f6b7ff16e465
    debug_file: libsystem_trace.dylib
    image_addr: 0x7fffe811a000
    image_size: 81920
  - debug_status: unused
    unwind_status: unused
    arch: unknown
    type: macho
    code_file: /usr/lib/system/libunwind.dylib
    debug_id: 3d50d8a8-c460-334d-a519-2da841102c6b
    debug_file: libunwind.dylib
    image_addr: 0x7fffe812e000
    image_size: 24576
  - debug_status: unused
    unwind_status: unused
    arch: unknown
    type: macho
    code_file: /usr/lib/system/libxpc.dylib
    debug_id: bf896df0-d8e9-31a8-a4b3-01120bfeee52
    debug_file: libxpc.dylib
    image_addr: 0x7fffe8134000
    image_size: 172032
